--- a/config/database.yml
+++ b/config/database.yml
@@ -10,17 +10,24 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: statusbackend
+  password: 123
 
 development:
   <<: *default
-  database: railsBackend_development
+  host: localhost
+  database: statusbackend_development
+  username: statusbackend
+  password: 123
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: railsBackend_test
+  database: statusbackend_test
+  username: statusbackend
+  password: 123
 
 # On Heroku and other platform providers, you may have a full connection URL
 # available as an environment variable. For example:
@@ -34,6 +41,6 @@ test:
 
 production:
   <<: *default
-  database: railsBackend_production
-  username: railsBackend
+  database: statusbackend_production
+  username: statusbackend
   password:  <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
